fix: text overflow

--- a/style.css
+++ b/style.css
@@ -117,10 +117,13 @@ a {
   background-color: transparent;
   border: none;
   cursor: pointer;
+  outline: none;
 }
 
-.slider__button:hover {
+.slider__button:hover,
+.slider__button:active {
   opacity: 0.6;
+  outline: none;
 }
 
 .slider__button--prev {
@@ -189,6 +192,7 @@ a {
 
 .services__text {
   margin: 0;
+  max-height: 93px;
   font-size: 12px;
   letter-spacing: 0;
   line-height: 22px;
@@ -354,6 +358,7 @@ a {
 .about-us__team {
   display: flex;
   max-width: 300px;
+  overflow: hidden;
 }
 
 .about-us__item:first-child {
